--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <nav>
             <h1>THE <span class="system">SYSTEM</span></h1>
@@ -69,5 +70,6 @@
     <footer>
         <p>© 2025 - The System</p>
     </footer>
+    </div>
 </body>
 </html>
