--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="midterm-images/icon.png" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
@@ -33,34 +34,34 @@
                 <h3>Meet the Locals</h3>
                 <div class="grid">
                     <div class="planet-item">
-                        <img src="midterm-images/sun.jpg" alt="The Sun">
+                        <img src="midterm-images/sun.jpg" alt="Image of the Sun">
                         <p>The Sun</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Sun" class="learn-more" target="_blank">Learn More</a>
                     </div>
                     <div class="planet-item">
-                        <img src="midterm-images/mercury.jpg" alt="Mercury">
+                        <img src="midterm-images/mercury.jpg" alt="Image of Mercury">
                         <p>Mercury</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Mercury_(planet)" class="learn-more" target="_blank">Learn More</a>
                     </div>
                     <div class="planet-item">
-                        <img src="midterm-images/venus.jpg" alt="Venus">
+                        <img src="midterm-images/venus.jpg" alt="Image of Venus">
                         <p>Venus</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Venus" class="learn-more" target="_blank">Learn More</a>
                     </div>
                     <div class="planet-item">
-                        <img src="midterm-images/earth.jpg" alt="Earth">
+                        <img src="midterm-images/earth.jpg" alt="Image of Earth">
                         <p>Earth</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Earth" class="learn-more" target="_blank">Learn More</a>
                     </div>
                     <div class="planet-item">
-                        <img src="midterm-images/moon.jpg" alt="The Moon">
+                        <img src="midterm-images/moon.jpg" alt="Image of the Moon">
                         <p>The Moon</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Moon" class="learn-more" target="_blank">Learn More</a>
                     </div>
                     <div class="planet-item">
-                        <img src="midterm-images/mars.jpg" alt="Mars">
+                        <img src="midterm-images/mars.jpg" alt="Image of Mars">
                         <p>Mars</p>
-                        <a href="#" class="learn-more">Learn More</a>
+                        <a href="https://en.wikipedia.org/wiki/Mars" class="learn-more" target="_blank">Learn More</a>
                     </div>
                 </div>
             </section>
