--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <nav>
-            <h1>THE <span class="system">SYSTEM</span></h1>
-            <ul>
-                <li><a href="#">Planets</a></li>
-                <li><a href="#">Interstellar</a></li>
-                <li><a href="#" class="btn">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <header role="banner">
+    <nav role="navigation">
+        <h1>THE <span class="system">SYSTEM</span></h1>
+        <ul>
+            <li><a href="#">Planets</a></li>
+            <li><a href="#">Interstellar</a></li>
+            <li><a href="#" class="btn">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+
 
     <main>
         <main>
             <section class="hero">
+                    <span>THE SYSTEM MAGAZINE</span>
                 <h2>Welcome to the <span class="solar-text">Solar System</span></h2>
                 <p>Take a tour around the coolest stellar system around.</p>
             </section>
-    
+            
             <section class="planets">
                 <h3>Meet the Locals</h3>
                 <div class="grid">
